# miniature-memory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_FORMAT.md  DEVELOPER_GUIDE.md  INTENT.md  NanoGPT_Adult_Training.ipynb  PIPELINE.md  README.md  ROADMAP.md  baseline_samples.txt  benchmark.py  benchmark_gen.py  benchmark_inference.py  debug_dom.html  generate.py  inference.sh  inference_benchmark.py  input.txt  model.py  optimized_samples.txt  output.txt  pyproject.toml  readme-dataset.md  requirements.txt  run.py  setup.sh  task.bat  test_compile.py  test_minimal.py  tokenizer.json  tokenizer.py  verify_kv_cache.py
..jules/: bolt.md
.jules/: AGENTS.md  BOLT_JOURNAL.md  README.md  ROADMAP.md  bolt.md  bolt_injector.md  bolt_llm.md  bolt_trainer.md
data/: train.txt
dataset/: README.md
dataset/metadata/: SOURCES.md  urls.jsonl
lewd_story_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
out-benchmark/: model.pt
processing/: __init__.py  normalize.py  pipeline.py  quality_filter.py  segment.py
scraper/: crawler.py  process.py  storage.py
scraper/commands/: __init__.py  process.py  search.py
scraper/search/: __init__.py  discover.py
scripts/: benchmark_generation.py  clean_dataset.py  cli.py  generate.py  prepare_data.py  stats.py  sync_hub.py  test_dataloader.py  validate_raw.py  verify_kv_cache.py
training/: data_loader.py  governor.py  model.py  train.py  trainer.py  transformer.py
training/configs/: benchmark.yaml  bolt_test_baseline.yaml  bolt_test_optimized.yaml  conservative.yaml  heavy_benchmark.yaml  small.yaml  (+4 more)
(+846 files in other folders)
