[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lewd-story-scraper"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A pipeline for scraping and processing Indonesian lewd stories."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
lewd-scraper = "scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]
exclude = ["tests*"]
